# gsf-sharp

./: .cvsignore  ChangeLog  configure.in  gsf-sharp.pc.in  makefile.am
glue/: Makefile.am  gsf-doc-prop-glue.c  gsf-doc-prop-glue.h
gsf/: .cvsignore  DocProp.custom  Global.custom  Gsf.metadata  Input.custom  Msole.custom  Output.custom  TestMSOle1.cs  gsf-api.raw  gsf-sharp.dll.config.in  makefile.am
sources/: gsf-sharp-sources.xml  makefile
